--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro Timer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@700&display=swap" rel="stylesheet">
+    <meta name="robots" content="index, follow" />
+
+    <!-- SEO Meta Tags -->
+    <title>Cogi: Deep Work Timer</title>
+    <meta
+      name="description"
+      content="Enhance your productivity with Cogi, a customizable Pomodoro timer for deep work. Track your progress with work sessions and breaks."
+    />
+    <meta
+      name="keywords"
+      content="pomodoro timer, productivity tool, deep work, focus timer, work sessions, break timer, time management, study timer, task management, distraction-free work, habit building, streak tracker, focus app"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cogi.study" />
+    <meta property="og:title" content="Cogi: Deep Work Timer" />
+    <meta
+      property="og:description"
+      content="Enhance your productivity with Cogi, a customizable Pomodoro timer for deep work. Track your progress with work sessions and breaks."
+    />
+    <meta property="og:image" content="https://cogi.study/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://cogi.study" />
+    <meta property="twitter:title" content="Cogi: Deep Work Timer" />
+    <meta
+      property="twitter:description"
+      content="Enhance your productivity with Cogi, a customizable Pomodoro timer for deep work. Track your progress with work sessions and breaks."
+    />
+    <meta
+      property="twitter:image"
+      content="https://cogi.study/twitter-image.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
